<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/schedule_title_first"
                android:id="@+id/textView"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/schedule_title_from"
                android:id="@+id/textView2"
                android:layout_below="@+id/textView"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/schedule_title_to"
                android:id="@+id/textView3"
                android:layout_below="@+id/textView"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/schedule_title_second"
                android:id="@+id/textView4"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/schedule_minibus_from_university"
                android:layout_marginTop="10dp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/schedule_title_from"
                android:id="@+id/textView5"
                android:layout_below="@+id/textView4"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/schedule_title_to"
                android:id="@+id/textView6"
                android:layout_below="@+id/textView4"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/schedule_minibus_from_university"
                android:layout_below="@+id/textView2"
                android:layout_alignRight="@+id/textView2"
                android:layout_alignEnd="@+id/textView2"
                android:gravity="center_horizontal"/>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/schedule_minibus_to_university"
                android:layout_below="@+id/textView3"
                android:layout_alignLeft="@+id/textView3"
                android:layout_alignEnd="@+id/textView3"
                android:gravity="center_horizontal"/>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/schedule_support_from_university"
                android:layout_below="@+id/textView5"
                android:layout_alignRight="@+id/textView5"
                android:layout_alignEnd="@+id/textView5"
                android:gravity="center_horizontal"/>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/schedule_support_to_university"
                android:layout_below="@+id/textView6"
                android:layout_alignLeft="@+id/textView6"
                android:layout_alignEnd="@+id/textView6"
                android:gravity="center_horizontal"/>

        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
